graphql-parser/tests/snapshots/test__parse_query__subscription_directive.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            Operation(
                Subscription(
                    Subscription {
                        position: Pos(1:1),
                        name: None,
                        variable_definitions: [],
                        directives: [
                            Directive {
                                position: Pos(1:14),
                                name: "directive",
                                arguments: [],
                            },
                        ],
                        selection_set: SelectionSet {
                            span: (
                                Pos(1:25),
                                Pos(3:1),
                            ),
                            items: [
                                Field(
                                    Field {
                                        position: Pos(2:3),
                                        alias: None,
                                        name: "node",
                                        arguments: [],
                                        directives: [],
                                        selection_set: SelectionSet {
                                            span: (
                                                Pos(2:3),
                                                Pos(2:3),
                                            ),
                                            items: [],
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ),
        ],
    },
)
